# unfold

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: help.rs  tests.rs
tests/test_resources/media/books 📖/fiction/: Percy Jackson and the Olympians - The Lightning Thief  The Martian
tests/test_resources/media/books 📖/non-fiction/: 1984  A People's History of the United States
tests/test_resources/media/movies 📽/: The Matrix  WALL·E
