[package]
name = "unfold-symlinks"
version = "0.2.0"
authors = ["sqrtrae <sqrtrae@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = """
unfold is a small command line utility that
replaces symbolic links with their targets.
"""
readme = "README.md"
documentation = "https://github.com/sqrtrae/unfold"
repository = "https://github.com/sqrtrae/unfold"
license = "MIT OR Apache-2.0"
exclude = [
    "/.github/"
]
keywords = ["symlink", "symbolic", "link"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.95"
symlink = "0.1.0"

[dependencies.clap]
version = "4.5.29"
default-features = false
features = ["std", "help", "usage", "error-context", "derive"]

[[bin]]
name = "unfold"
path = "src/main.rs"

[profile.release]
strip = true
codegen-units = 1
lto = true

[dev-dependencies]
assert_cmd = "2.0.16"
dircpy = "0.3.19"
predicates = "3.1.3"
tempfile = "3.17.0"
